...
//           crossAxisAlignment: CrossAxisAlignment.center,
//           children: [
//             const SizedBox(height: 20),
//             Text('Leave a feedback!', style: theme.textTheme.headlineSmall),
//             const SizedBox(height: 20),
//             TextField(
//               key: const Key('feedbackField'), // Key para pruebas
//               controller: feedbackController,
//               maxLines: 5,
//               decoration: InputDecoration(
//                 hintText: 'Write a feedback...',
//                 border: InputBorder.none,
//                 filled: true,
...
//                       ),
//                     ),
//                   ),
//                 )),
//             const SizedBox(height: 20),
//             ElevatedButton(
//               key: const Key('submitFeedbackButton'), // Key para pruebas
//               onPressed: () {
//                 if (selectedRating.value > 0) {
//                   final event = Get.find<EventController>().selectedEvent.value;
//                   if (event != null) {
//                     Get.find<EventController>().addFeedback(
//                       event,
...
