...
                  AdaptiveTheme.of(context).setLight();
                }
              },
            ),
            const SizedBox(height: 16),
            ListTile(
              key: const Key('logoutButton'),
              tileColor: Theme.of(context).cardColor,
              leading:
                  Icon(Icons.edit, color: Theme.of(context).iconTheme.color),
              title: Text(
                'Change name',
                style: TextStyle(
...
